2003-04-22  Bruno Haible  <bruno@clisp.org>

	* sk.po: Update from Marcel Telka <marcel@telka.sk>.

2003-04-12  Bruno Haible  <bruno@clisp.org>

	VMS support.
	* Rules-vms: New file.
	* Makefile.vms.sh: New file.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* Makefile.msvc.sh: New file.
	* Rules-msvc: New file.

2003-03-29  Bruno Haible  <bruno@clisp.org>

	* id.po: Update from Tedi Heriyanto <tedi_h@gmx.net>.
	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* POTFILES.in: Use references to ../gettext-tools/lib.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (mkinstalldirs): Simplify. Prepending
	"$(top_builddir)/" in the case of a relative $srcdir is now handled
	in gettext.m4.

2003-02-24  Bruno Haible  <bruno@clisp.org>

	* de.po: Update from Karl Eichwalder <ke@suse.de>.
	* ja.po: Update from Masahito Yamaga <ma@yama-ga.com>.
	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
	* ru.po: Update from Oleg S. Tihonov <tihonov@ffke-campus.mipt.ru>.

2003-02-16  Bruno Haible  <bruno@clisp.org>

	* Makevars (MSGID_BUGS_ADDRESS): New variable.
	* Makefile.in.in (DISTFILES.common): Remove Makevars.
	(DISTFILES): Add Makevars here.
	($(DOMAIN).pot-update): Pass --msgid-bugs-address to xgettext.
	(install-data): Install Makevars.template. Uninstall Makevars.
	(uninstall-data): Uninstall Makevars.template.
	(dist2): Distribute Makevars.template, in gettext-tools package only.

2003-02-12  Bruno Haible  <bruno@clisp.org>

	* POTFILES.in: New file.
	* Makevars: New file.

	* Makefile.in.in (install-data, installdirs-data, uninstall-data):
	Special case package 'gettext-tools'.
	(.nop.po-update): Likewise.
	(dist2): Distribute also ChangeLog.[0-9] if present.
